2004-06-27  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Include <sys/param.h> for td_pcb test.
	* configure: Regenerated.

	* i386nbsd-nat.c: New file.
	* Makefile.in (ALLDEPFILES): Add i386nbsd-nat.c, i386nbsd-tdep.c,
	i386obsd-nat.c and i386obsd-tdep.c.
	(i386nbsd-nat.o): New dependency.
	* config/i386/obsd.mh (NATDEPFILES): Add i386nbsd-nat.o and
	bsd-kvm.o.
	(LOADLIBES): New variable.
	* config/i386/nbsdelf.mh (NATDEPFILES): Add i386nbsd-nat.o and
	bsd-kvm.o.
	(LOADLIBES): New variable.

	* config/i386/fbsd64.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.

	* bsd-kvm.c (bsd_kvm_fetch_registers): Directly return after
	fetching from BSD_KVM_PADDR.  Correctly lookup address for
	"_thread0".

	* amd64fbsd-nat.c: Include <sys/types.h, <machine/pcb.h> and
	"bsd-kvm.h".
	(amd64fbsd_supply_pcb): New funcion.
	(_initialize_amd64fbsd_nat): Enable libkvm interface.

2004-06-27    <david@streamline-computing.com>

	Partial fix for PR cli/1056.
	* valarith.c: Check for zero in division and remainder 
	evaluation.

2004-06-27  Mark Kettenis  <kettenis@gnu.org>

	* i387-tdep.c: Remove excessive whitespace.

2004-06-26  Andrew Cagney  <cagney@gnu.org>

	* gdb-events.sh (deprecated_set_gdb_event_hooks): Deprecated.
	* gdb-events.h, gdb-events.c: Re-generate.
	* tui/tui-hooks.c (tui_install_hooks): Update.
	(tui_remove_hooks): Update.
	* mi/mi-cmd-break.c (mi_cmd_break_insert): Update.

2004-06-26  Mark Kettenis  <kettenis@gnu.org>

	* amd64fbsd-nat.c: Don't include <sys/procfs.h> and "gregset.h".
	(gregset_t, fpregset_t): Remove typedefs.
	(REG_OFFSET): Rename argument.
	(amd64bsd_r_reg_offset): Rename from reg_offset.
	(supply_gregset, fill_gregset, supply_fpregset, fill_fpregset):
	Remove functions.
	(_initialize_amd64fbsd_nat): Use amd64fbsd64_r_reg_offset instead
	of reg_offset.
	* Makefile.in (amd64fbsd-nat.o): Update dependencies.

	* amd64-nat.c (amd64_supply_native_gregset): Fix comment.

	* vax-tdep.c: Tweak comment.

	Add OpenBSD/hppa support.